DON'T MODIFY THESE FILES

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-bluetooth-serial"
   ],
   "cordovaPlatforms": []
 }
